tests/semantic/attrib_dupl/attrib_dupl.err
Warning: No rules/facts defined for relation R in file attrib_dupl.dl at line 5
.decl R(type:Type, type:Type)
^-----------------------------
Error: Doubly defined attribute name type:Type in file attrib_dupl.dl at line 5
.decl R(type:Type, type:Type)
------------------------^-----
1 errors generated, evaluation aborted
