tests/semantic/attrib_dupl/attrib_dupl.dl
// Negative test case for a duplicate definition of a relation

.type Type

.decl R(type:Type, type:Type)
